<resources>
    <string name="app_name">OnlyFans</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="description">Description</string>
    <string name="numberOfComments">View all comments</string>
    <string name="numberOfLikes">100 likes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>